bdr.BDR.scala.error
Compilation error:
BDR:3: error: not found: value char
while (! finished){char getIndication();
                   ^BDR:4: error: not found: value R
                  if (R) {right();
                      ^BDR:6: error: not found: value L
                  if (L) {left();
                      ^BDR:8: error: not found: value I
                  if (I) {left();
                      ^BDR:11: error: not found: value A
                  if (A) {forward()}
                      ^BDR:12: error: not found: value B
                  if (B) {forward();
                      ^BDR:14: error: not found: value C
                  if (C) {forward();
                      ^BDR:17: error: not found: value Z
                  if (Z) {backward()}
                      ^BDR:18: error: not found: value Y
                  if (Y) {backward();
                      ^BDR:20: error: not found: value X
                  if (X) {backward();
                      ^